# kapkorn

client/: .gitignore  next.config.mjs  package.json  pnpm-lock.yaml  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json  tsconfig.tsbuildinfo
client/src/: instrumentation-client.ts  instrumentation.ts  page.tsx  proxy.ts  vite-env.d.ts
client/src/app/: layout.tsx
client/src/app/(home)/: error.tsx
client/src/configs/: api.config.ts  app.config.ts  index.ts  navigation.ts
client/src/constants/: common.ts  index.ts  routes.ts
client/src/lib/: animations.ts  logging.ts
client/src/schemas/: auth.schema.ts  index.ts
client/src/services/: error-reporting.service.ts
client/src/types/: index.ts
serverapp/: .env.sample  README.md  pyproject.toml
serverapp/apiapp/api/: __init__.py
serverapp/apiapp/api/core/: app_settings.py  config.py  exceptions.py  security.py
serverapp/apiapp/api/middlewares/: __init__.py
serverapp/apiapp/api/routers/: __init__.py
serverapp/apiapp/api/routers/v1/: auth.py  user.py
serverapp/apiapp/api/utils/: dependencies.py
serverapp/apiapp/models/: __init__.py  request_log_model.py  token_model.py  user_model.py
serverapp/apiapp/repositories/: __init__.py  base_repo.py  user_repo.py
serverapp/apiapp/schemas/: __init__.py  auth_schema.py  base_schema.py  user_schema.py
serverapp/apiapp/services/: __init__.py  auth_service.py  base_service.py  user_service.py
serverapp/apiapp/utils/: request_logs.py  schema.py
serverapp/scripts/: init-admin  run-dev  run-prod
(+15 files in other folders)
